Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,20 +45,18 @@ Notification is the name of Project and signups is the App.</p>
 </ol>
 
 <h1>
-<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h1>
+<a id="technologies-used" class="anchor" href="#technologies-used" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technologies Used</h1>
 
 <ol>
-<li><p>Although the content of Javascript alert() is hardcoded, I  have written a script, namely ipl_result.py that scrapes the latest score from internet and outputs on screens, now this output can be feed into alert() manually. So the maintainer doesnot have to search for lastest score, instead he can just run the script and feed the output in the alert()</p></li>
-<li><p>Settings.py is not hardcoded, for template paths and directories. Therefore, git clone will work fine.</p></li>
-</ol>
-
-<h1>
-<a id="scopeimprovments" class="anchor" href="#scopeimprovments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scope/Improvments</h1>
-
-<ol>
-<li>alert() is hardcoded, thus it must be changed/refreshed by maintainer every day once, for the notification to be relevent.</li>
-<li>As the code is deployed on heroku, after refresh, it again needs to be pushed to heroku masters.</li>
-<li>The database used is sqlite3, which is not suited for bigger applicaition with high traffic, therefore it is recomended to migrate to MySql or Postgrace.</li>
+<li>Python(Core)</li>
+<li>Django(Framework)</li>
+<li>Javascript(The Programming backbone for HMTL)</li>
+<li>HTML(becasue, its needed!!!)</li>
+<li>AJAX(For Server-side Communication)</li>
+<li>CSS(For Styling)</li>
+<li>XML(Data)</li>
+<li>Yahoo API</li>
+<li>Sqlite3(Database)</li>
 </ol>
 
 <h1>
@@ -70,7 +68,7 @@ Notification is the name of Project and signups is the App.</p>
 
 <pre><code>    $virtualenv &lt;env_name&gt;
     $source &lt;env_name&gt;/bin/activate
-    $mkdir &lt;env_name&gt;
+    $cd &lt;env_name&gt;
 </code></pre>
 </li>
 <li>
